Make line breaks visible for recipe instructions. Fix for #15

--- a/src/main/resources/static/assets/css/main.css
+++ b/src/main/resources/static/assets/css/main.css
@@ -3604,3 +3604,7 @@ input, select, textarea {
 			margin-top: 0;
 			padding-top: 0;
 		}
+
+.showLineBreak {
+	white-space: pre-line;
+}
